@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-10T08:28:55Z",
+  "timestamp" : "2022-10-10T16:28:14Z",
   "count_outdated" : 572,
   "uniques_outdated" : 329,
-  "count" : 593,
-  "uniques" : 340,
+  "count" : 594,
+  "uniques" : 341,
   "clones" : [
     {
       "timestamp": "2022-09-26T00:00:00Z",
@@ -60,6 +60,13 @@
       "count_minmax": [ 2, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-10-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
