@@ -1,5 +1,5 @@
 {
-  "count": 21,
+  "count": 22,
   "uniques": 5,
   "clones": [
     {
@@ -41,6 +41,11 @@
       "timestamp": "2022-10-09T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
