@@ -1,3 +1,11 @@
+2022-10-10T16:28:14Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3220892662
+* notice: last 14d: unq all: 5 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 329 572 / 340 593
+* notice: next accum: outdated-unq outdated-all / unq all: 329 572 / 341 594
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-10]
+
 2022-10-10T08:28:55Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3217882082
 * notice: last 14d: unq all: 5 21
